--- a/README
+++ b/README
@@ -5,4 +5,4 @@ Copyright (c) 2014 Mohammed Sadiq <sadiq@sadiqpk.org>
 
 tagger is a small script that shall allow you to
 modify comments in mp3 ID tags. The script allows you
-to modify files recuresivly.
+to modify files recursively.
