--- a/README
+++ b/README
@@ -6,3 +6,10 @@ Copyright (c) 2014 Mohammed Sadiq <sadiq@sadiqpk.org>
 tagger is a small script that shall allow you to
 modify comments in mp3 ID tags. The script allows you
 to modify files recursively.
+
+
+Known bugs
+==========
+
+* Replaces `_' with space in filenames
+* Doesn't works with directories having space in filename.
