--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Some commenly used snippets. 
+Some commonly used snippets. 
 Please see the corresponding README files for more details.
 
 Copyright (c) 2014 Mohammed Sadik P. K. <sadiq@sadiqpk.org>
